force-app/main/default/objects/Vendors_and_Series__c/Vendors_and_Series__c.object-meta.xml
<CustomObject>
    <label>Vendors and Series</label>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>Vendors and Series Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors and Series</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>