force-app/main/default/objects/Vendors_and_Series__c/fields/Availability_notes__c.field-meta.xml
<CustomField>
    <fullName>Availability_notes__c</fullName>
    <inlineHelpText>Notes about why this product was not available</inlineHelpText>
    <label>Availability notes</label>
    <type>TextArea</type>
</CustomField>