force-app/main/default/objects/Vendors_and_Series__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Free form text area to enter Color of tile as related to Vendor/Series</description>
    <inlineHelpText>Enter the color name or colors of tile selected, ex. Red, Blue, Tropic Brown, etc.</inlineHelpText>
    <label>Color &amp; Finish</label>
    <length>56</length>
    <type>Text</type>
</CustomField>