force-app/main/default/objects/Vendors_and_Series__c/fields/Is_Item_for_Outdoor_Installation__c.field-meta.xml
<CustomField>
    <fullName>Is_Item_for_Outdoor_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Item for Outdoor Installation</label>
    <type>Checkbox</type>
</CustomField>