force-app/main/default/objects/Vendors_and_Series__c/fields/Item_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Item_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Ordered</label>
    <type>Checkbox</type>
</CustomField>