force-app/main/default/objects/Vendors_and_Series__c/fields/Job_Registration_Needed__c.field-meta.xml
<CustomField>
    <fullName>Job_Registration_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not this series requires a job registration</description>
    <label>Job Registration Needed</label>
    <type>Checkbox</type>
</CustomField>