force-app/main/default/objects/Vendors_and_Series__c/fields/Job_Registration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Job_Registration_Notes__c</fullName>
    <description>Notes for the required job registration</description>
    <label>Job Registration Notes</label>
    <type>TextArea</type>
</CustomField>