force-app/main/default/objects/Vendors_and_Series__c/fields/Job_Registration_Sent__c.field-meta.xml
<CustomField>
    <fullName>Job_Registration_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the Job Registration was already sent</description>
    <label>Job Registration Sent</label>
    <type>Checkbox</type>
</CustomField>