force-app/main/default/objects/Vendors_and_Series__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Install Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>