force-app/main/default/objects/Vendors_and_Series__c/fields/Lost_due_to_availability__c.field-meta.xml
<CustomField>
    <fullName>Lost_due_to_availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specs that are lost because the particular tile selected was not available fast enough</description>
    <label>Lost due to availability</label>
    <type>Checkbox</type>
</CustomField>