force-app/main/default/objects/Vendors_and_Series__c/fields/Not_Sold__c.field-meta.xml
<CustomField>
    <fullName>Not_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if we sold the opportunity, but not this individual line item.</inlineHelpText>
    <label>Not Sold</label>
    <type>Checkbox</type>
</CustomField>