force-app/main/default/objects/Vendors_and_Series__c/fields/Pattern_Layout__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Layout__c</fullName>
    <label>Pattern / Layout</label>
    <length>25</length>
    <type>Text</type>
</CustomField>