force-app/main/default/objects/Vendors_and_Series__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Free form text field for entry of size related to Vendor/Series selection</description>
    <inlineHelpText>Enter size of tile selected, ex. 12x12, 12x24, 6x6</inlineHelpText>
    <label>Size</label>
    <length>24</length>
    <type>Text</type>
</CustomField>