force-app/main/default/objects/Vendors_and_Series__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Olean</fullName>
                <color>#0B6FCE</color>
                <label>American Olean</label>
            </value>
            <value>
                <fullName>American Universal</fullName>
                <color>#78C953</color>
                <label>American Universal</label>
            </value>
            <value>
                <fullName>Anatolia</fullName>
                <color>#E27001</color>
                <label>Anatolia</label>
            </value>
            <value>
                <fullName>Ann Sacks</fullName>
                <color>#A845DC</color>
                <label>Ann Sacks</label>
            </value>
            <value>
                <fullName>Anthology</fullName>
            </value>
            <value>
                <fullName>AOT</fullName>
                <color>#33FFFF</color>
                <label>AOT</label>
            </value>
            <value>
                <fullName>Aqua Mix</fullName>
                <color>#F3D904</color>
                <label>Aqua Mix</label>
            </value>
            <value>
                <fullName>Artistic Tile</fullName>
                <color>#A53711</color>
                <label>Artistic Tile</label>
            </value>
            <value>
                <fullName>Atlas Concorde</fullName>
                <color>#66E9BD</color>
                <label>Atlas Concorde</label>
            </value>
            <value>
                <fullName>Atlas USA</fullName>
            </value>
            <value>
                <fullName>Bostik</fullName>
            </value>
            <value>
                <fullName>Caribe</fullName>
                <color>#B6E32E</color>
                <label>Caribe</label>
            </value>
            <value>
                <fullName>Ceramica Vogue</fullName>
            </value>
            <value>
                <fullName>Crossville</fullName>
                <color>#2F5D85</color>
                <label>Crossville</label>
            </value>
            <value>
                <fullName>Custom Building Products</fullName>
                <color>#AFCADF</color>
                <label>Custom Building Products</label>
            </value>
            <value>
                <fullName>E&amp;S</fullName>
                <color>#8F6429</color>
                <label>E&amp;S</label>
            </value>
            <value>
                <fullName>EMIL</fullName>
            </value>
            <value>
                <fullName>Fila</fullName>
            </value>
            <value>
                <fullName>Florida Tile</fullName>
                <color>#57F17C</color>
                <label>Florida Tile</label>
            </value>
            <value>
                <fullName>Florim</fullName>
                <color>#0B6FCE</color>
                <label>Florim</label>
            </value>
            <value>
                <fullName>Glass Tile &amp; Stone</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <color>#78C953</color>
                <label>Global</label>
            </value>
            <value>
                <fullName>Ilva</fullName>
            </value>
            <value>
                <fullName>Imola</fullName>
                <color>#E27001</color>
                <label>Imola</label>
            </value>
            <value>
                <fullName>Ironrock</fullName>
                <color>#A845DC</color>
                <label>Ironrock</label>
            </value>
            <value>
                <fullName>Island Stone</fullName>
                <color>#F3D904</color>
                <label>Island Stone</label>
            </value>
            <value>
                <fullName>Jeffrey Court</fullName>
                <color>#A53711</color>
                <label>Jeffrey Court</label>
            </value>
            <value>
                <fullName>Laticrete</fullName>
                <color>#66E9BD</color>
                <label>Laticrete</label>
            </value>
            <value>
                <fullName>Lilli Cement</fullName>
            </value>
            <value>
                <fullName>Lungarno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>