force-app/main/default/objects/Vendors_and_Series__c/validationRules/Availability_notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Availability_notes</fullName>
    <active>true</active>
    <description>Availability notes field is required if the lost due to availability is checked</description>
    <errorConditionFormula>ISBLANK ( Availability_notes__c ) &amp;&amp; (Lost_due_to_availability__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Lost_due_to_availability__c</errorDisplayField>
    <errorMessage>Please complete Availability Notes field</errorMessage>
</ValidationRule>