force-app/main/default/objects/Vendors_and_Series__c/validationRules/Quantity_Required_for_Job_Registration.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required_for_Job_Registration</fullName>
    <active>true</active>
    <description>If Job Registration Needed is checked the Quantity field must be populated</description>
    <errorConditionFormula>Job_Registration_Needed__c &amp;&amp; ISBLANK(Quantity__c)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity is required when Job Registration is needed</errorMessage>
</ValidationRule>